# jsoninja

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: ci.yaml  publish.yaml
jsoninja/: __init__.py
requirements/: development.txt
scripts/: format.sh  lint.sh  test.sh
tests/: jsoninja_test.py  test_jsoninja.py
