[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jsoninja"
version = "1.1.0"
description = "Jsoninja is a library that allows you to generate JSON's from templates written with Python data types."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Víctor Lázaro", email = "vlazaro@outlook.es" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: File Formats",
    "Topic :: File Formats :: JSON",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Source = "https://github.com/vlazaroes/jsoninja"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
]
ignore = [
    "E501", # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["jsoninja", "tests"]

[tool.mypy]
strict = true
