[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsoninja"
version = "1.2.0"
description = "Jsoninja is a library that allows you to generate JSON's from templates written with Python data types."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Víctor Lázaro", email = "vlazaro@outlook.es" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: File Formats",
    "Topic :: File Formats :: JSON",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[dependency-groups]
dev = [
    "coverage==7.13.0; python_version>='3.10'",
    "pre-commit==4.5.1; python_version>='3.10'",
    "pytest==9.0.2; python_version>='3.10'",
    "ruff==0.14.10",
    "ty==0.0.7",
]

[project.urls]
Source = "https://github.com/vlazaroes/jsoninja"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
]
ignore = [
    "E501", # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["jsoninja", "tests"]
